# django-channels-discord

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
channels_dicord/: cli.py  client.py  consumers.py
channels_discord/: cli.py  client.py  consumers.py
