[metadata]
name = channels_discord
version = attr: channels_discord.__version__
author = Advocates Inc
author_email = admin@adv.gg
description = Interface server connecting Django's channels and Discord
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/AdvocatesInc/django-channels-discord
project_urls = 
    Bug Tracker = https://github.com/AdvocatesInc/django-channels-discord/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    discord.py>=1.7.3
    channels>=3.0.0

[options.entry_points]
console_scripts =
    channels-discord = channels_discord.cli:CLI.entrypoint
